--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p id="message"></p>
 
 <script>
-const API_URL = "PASTE_YOUR_GOOGLE_SCRIPT_URL_HERE";
+const API_URL = "https://script.google.com/macros/s/AKfycbx0lTR6dkYQbESbDmH7IafiJEYFp9PNOaWJL45L3-Lmb9vf8EgUQjQ0i_LB1svyQke7/exec";
 
 function checkIn() {
   fetch(API_URL, {
