--- a/index.html
+++ b/index.html
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Med Gala Check-In</title>
+  <title>Med Gala 2026 Check-In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body { font-family: Arial; text-align: center; padding: 30px; }
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 30px;
+      transition: background-color 0.3s ease;
+    }
+
+    body.success {
+      background-color: #2ecc71;
+      color: white;
+    }
+
+    body.error {
+      background-color: #e74c3c;
+      color: white;
+    }
+
+    body.warning {
+      background-color: #f39c12;
+      color: white;
+    }
+
     input, button {
       font-size: 18px;
       padding: 12px;
       margin: 10px;
       width: 85%;
     }
-    .success { color: green; }
-    .error { color: red; }
-    .warning { color: orange; }
+
+    #container {
+      max-width: 400px;
+      margin: auto;
+    }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
 
-<h2>🎟️ Med Gala Check-In</h2>
+<div id="container">
+  <h2>🎟️ Med Gala 2026 Check-In</h2>
 
-<input id="first" placeholder="First Name">
-<input id="last" placeholder="Last Name">
-<button onclick="checkIn()">Check In</button>
+  <input id="first" placeholder="First Name">
+  <input id="last" placeholder="Last Name">
+  <button onclick="checkIn()">Check In</button>
 
-<p id="message"></p>
+  <h1 id="message"></h1>
+</div>
 
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbx0lTR6dkYQbESbDmH7IafiJEYFp9PNOaWJL45L3-Lmb9vf8EgUQjQ0i_LB1svyQke7/exec";
+const RESET_DELAY = 3000; // milliseconds
 
 function checkIn() {
   fetch(API_URL, {
@@ -39,10 +70,28 @@ function checkIn() {
   })
   .then(res => res.json())
   .then(data => {
-    const msg = document.getElementById("message");
-    msg.textContent = data.message;
-    msg.className = data.status;
+    // Set full-screen color
+    document.body.className = data.status;
+
+    // Show message
+    document.getElementById("message").textContent = data.message;
+
+    // Hide form temporarily
+    document.getElementById("container").classList.add("hidden");
+
+    // Reset after delay
+    setTimeout(resetScreen, RESET_DELAY);
   });
+}
+
+function resetScreen() {
+  document.body.className = "";
+  document.getElementById("message").textContent = "";
+  document.getElementById("container").classList.remove("hidden");
+
+  // Clear inputs
+  document.getElementById("first").value = "";
+  document.getElementById("last").value = "";
 }
 </script>
 
