--- a/index.html
+++ b/index.html
@@ -7,40 +7,67 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 30px;
+      margin: 0;
       transition: background-color 0.3s ease;
+      text-align: center;
     }
 
-    body.success {
-      background-color: #2ecc71;
-      color: white;
-    }
+    body.success { background-color: #2ecc71; color: white; }
+    body.error { background-color: #e74c3c; color: white; }
+    body.warning { background-color: #f39c12; color: white; }
 
-    body.error {
-      background-color: #e74c3c;
-      color: white;
-    }
-
-    body.warning {
-      background-color: #f39c12;
-      color: white;
+    #container {
+      padding: 40px 20px;
+      max-width: 400px;
+      margin: auto;
     }
 
     input, button {
       font-size: 18px;
       padding: 12px;
       margin: 10px;
-      width: 85%;
+      width: 90%;
+      border-radius: 6px;
+      border: none;
     }
 
-    #container {
-      max-width: 400px;
-      margin: auto;
+    button {
+      cursor: pointer;
     }
 
-    .hidden {
+    #result {
       display: none;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .icon {
+      font-size: 120px;
+      animation: pop 0.4s ease-out;
+    }
+
+    @keyframes pop {
+      0% { transform: scale(0.2); opacity: 0; }
+      80% { transform: scale(1.2); }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    .message {
+      font-size: 28px;
+      margin: 20px;
+    }
+
+    .reset-btn {
+      background: rgba(255,255,255,0.9);
+      color: #333;
+      font-size: 18px;
+      padding: 12px 20px;
+      border-radius: 8px;
+      margin-top: 30px;
+      width: auto;
     }
   </style>
 </head>
@@ -53,12 +80,19 @@
   <input id="last" placeholder="Last Name">
   <button onclick="checkIn()">Check In</button>
 
-  <h1 id="message"></h1>
+  <p style="opacity:0.8; font-size:14px;">
+    Please enter the name on your invitation
+  </p>
+</div>
+
+<div id="result">
+  <div id="icon" class="icon"></div>
+  <div id="message" class="message"></div>
+  <button class="reset-btn" onclick="resetScreen()">Next Guest</button>
 </div>
 
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbx0lTR6dkYQbESbDmH7IafiJEYFp9PNOaWJL45L3-Lmb9vf8EgUQjQ0i_LB1svyQke7/exec";
-const RESET_DELAY = 3000; // milliseconds
 
 function checkIn() {
   fetch(API_URL, {
@@ -69,27 +103,34 @@ function checkIn() {
     })
   })
   .then(res => res.json())
-  .then(data => {
-    // Set full-screen color
-    document.body.className = data.status;
+  .then(data => showResult(data));
+}
 
-    // Show message
-    document.getElementById("message").textContent = data.message;
+function showResult(data) {
+  document.body.className = data.status;
 
-    // Hide form temporarily
-    document.getElementById("container").classList.add("hidden");
+  document.getElementById("container").style.display = "none";
+  document.getElementById("result").style.display = "flex";
 
-    // Reset after delay
-    setTimeout(resetScreen, RESET_DELAY);
-  });
+  const icon = document.getElementById("icon");
+  const message = document.getElementById("message");
+
+  if (data.status === "success") {
+    icon.textContent = "✔️";
+  } else if (data.status === "warning") {
+    icon.textContent = "⚠️";
+  } else {
+    icon.textContent = "❌";
+  }
+
+  message.textContent = data.message;
 }
 
 function resetScreen() {
   document.body.className = "";
-  document.getElementById("message").textContent = "";
-  document.getElementById("container").classList.remove("hidden");
+  document.getElementById("container").style.display = "block";
+  document.getElementById("result").style.display = "none";
 
-  // Clear inputs
   document.getElementById("first").value = "";
   document.getElementById("last").value = "";
 }
