--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <button onclick="checkIn()">Check In</button>
 
   <p style="opacity:0.8; font-size:14px;">
-    Please enter the name on your invitation
+    Please enter the same name used on your ticket purchase
   </p>
 </div>
 
