--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Med Gala Check-In</title>
+  <title>Med Gala 2026 Check-In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -93,7 +93,7 @@
 
 <!-- FORM SCREEN -->
 <div id="container">
-  <h2>🎟️ Med Gala Check-In</h2>
+  <h2>🎟️ Med Gala 2026 Check-In</h2>
 
   <input id="first" placeholder="First Name">
   <input id="last" placeholder="Last Name">
