--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <button id="checkinBtn" onclick="checkIn()">Check In</button>
 
   <p style="opacity:0.8; font-size:14px;">
-    Please enter the name on your invitation
+    Please enter the name used on your ticket purchase
   </p>
 </div>
 
@@ -118,7 +118,7 @@
 </div>
 
 <script>
-const API_URL = "PASTE_YOUR_GOOGLE_SCRIPT_URL_HERE";
+const API_URL = "https://script.google.com/macros/s/AKfycbzslTF3MVG-MUeHhHQgx_-qqMNC5bvdIkqZ3XaUhmI8wIHTZ4ITibNeZztXg2L7kbmeBw/exec";
 let locked = false;
 
 function checkIn() {
